improve logic of legalCascadingPlan